<resources>
    <string name="app_name">Task5 Extra</string>
    <string name="textview">Choose an email you want to fetch:</string>
    <string name="button">Fetch Mail</string>
    <string name="textcontent">Your email here…</string>
    <string name="email">Email:</string>
    <string name="kth_se">@kth.se</string>
    <string name="password">Password:</string>
    <string name="no">No.:</string>
</resources>